kubernetes/apps/selfhosted/ghostfolio/redis/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: ghostfolio-redis
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: ghostfolio-redis
  ingress:
    # ghostfolio
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ghostfolio
      toPorts:
        - ports:
            - port: "6379"
              protocol: TCP
